small visual bugfixes for broken pagination on oauth related settings pages and a double "Update" button

--- a/app/views/oauth/applications/index.html.haml
+++ b/app/views/oauth/applications/index.html.haml
@@ -39,7 +39,7 @@
                   No applications made yet
 
       = c.footer do
-        - pagination = paginate @applications, theme: "card_footer"
+        - pagination = paginate @applications
         - if pagination.present?
           = pagination
         - else
