--- a/app/views/oauth/authorized_applications/index.html.haml
+++ b/app/views/oauth/authorized_applications/index.html.haml
@@ -35,7 +35,7 @@
                   No applications authorized
 
       = c.footer do
-        - pagination = paginate @applications, theme: "card_footer"
+        - pagination = paginate @applications
         - if pagination.present?
           = pagination
         - else
